# SFEM

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  install.py
apps/: CMakeLists.txt
apps/mesh_utils/: CMakeLists.txt  gmsh_to_sfem.cc  sfem_to_vtk.cc
examples/: .gitignore
examples/elasticity2D/: CMakeLists.txt  main.cc  main.py  run.sh
examples/elasticity2D/mesh/mesh_quad1/: cells
examples/elasticity2D/mesh/mesh_quad2/: benchmark.msh2  regions
examples/elasticity2D/mesh/mesh_quad3/: benchmark.msh2  cells  xpts
examples/elasticity2D/mesh/mesh_tri1/: cells
examples/elasticity2D/mesh/mesh_tri2/: benchmark.msh2  cells  xpts
examples/elasticity2D/mesh/mesh_tri3/: benchmark.msh2  cells  xpts
examples/elasticity3D/: CMakeLists.txt  main.cc  main.py  run.sh
examples/elasticity3D/mesh/mesh_tet1/: cells  regions
examples/elasticity3D/mesh/mesh_tet2/: beam.msh  cells  xpts
examples/laplace/: CMakeLists.txt  main.cc  main.py  run.sh
examples/laplace/mesh/: plate_cyl.geo  regions
examples/laplace/results/: solution.csv
examples/transient/: main.py
examples/transient/mesh/: cells  xpts
pysfem/: CMakeLists.txt
pysfem/wrappers/: common.cc  fe.cc  geo.cc  io.cc  la.cc  mesh.cc  sfem.cc
src/: CMakeLists.txt  sfem.h
src/common/: CMakeLists.txt  config.h  error.cc  error.h  index_map.cc  index_map.h  init.cc  init.h  logger.cc  logger.h  math.h  mpi_utils.cc  mpi_utils.h  sfem_common.h  timer.cc  timer.h
src/fe/: CMakeLists.txt  finite_element.cc  finite_element.h  sfem_fe.h
src/fe/basis/: CMakeLists.txt  basis.cc  basis.h  hexahedral_basis.cc  line_basis.cc  point_basis.cc  quad_basis.cc  quadrature.h  sfem_basis.h  tetrahedral_basis.cc  triangle_basis.cc
src/fe/elements/: CMakeLists.txt  fe_creator.cc  fe_creator.h  sfem_elements.h
src/fe/elements/constitutive/: CMakeLists.txt  sfem_constitutive.h  thermoelastic.cc  thermoelastic.h  thermoelastic_plane.cc  thermoelastic_plane.h  thermoelastic_solid.cc  thermoelastic_solid.h
src/fe/elements/solid/: CMakeLists.txt  inertial_load.cc  inertial_load.h  linear_elasticity.cc  linear_elasticity.h  pressure_load.cc  pressure_load.h  sfem_solid_elements.h  thermal_load.cc  thermal_load.h
src/fe/elements/thermal/: CMakeLists.txt  heat_conduction.cc  heat_conduction.h  heat_convection.cc  heat_convection.h  heat_flux.cc  heat_flux.h  sfem_thermal_elements.h
src/fe/functions/: CMakeLists.txt  field_gradient.cc  field_gradient.h  function.h  sfem_function.h  stress.cc  stress.h  structural_mass.cc  structural_mass.h
src/fe/utils/: assembly.h  project_function.h  sfem_fe_utils.h
src/geo/: CMakeLists.txt  sfem_geo.h  vec3.cc  vec3.h
src/io/: CMakeLists.txt  field.cc  field.h  gmsh.cc  gmsh.h  mesh.cc  mesh.h  vtk.cc  vtk.h
src/la/: CMakeLists.txt  dense_matrix.cc  dense_matrix.h  sfem_la.h  sparsity_pattern.cc  sparsity_pattern.h
src/la/petsc/: CMakeLists.txt  petsc_ksp.cc  petsc_ksp.h  petsc_mat.cc  petsc_mat.h  petsc_utils.h  petsc_vec.cc  petsc_vec.h  sfem_petsc.h
src/la/slepc/: CMakeLists.txt  sfem_slepc.h  slepc_eps.cc  slepc_eps.h
src/mesh/: CMakeLists.txt  cell.cc  cell.h  connectivity.cc  connectivity.h  field.cc  field.h  mesh.cc  mesh.h  partition.cc  partition.h  region.cc  region.h  sfem_mesh.h
