#==============================================================================
add_subdirectory(basis)
#==============================================================================
add_subdirectory(functions)
#==============================================================================
add_subdirectory(elements)
#==============================================================================
target_sources(sfem PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/finite_element.cc)