#==============================================================================
add_subdirectory(constitutive)
#==============================================================================
add_subdirectory(thermal)
#==============================================================================
add_subdirectory(solid)
#==============================================================================
target_sources(sfem PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/fe_creator.cc)